faq questions changes

--- a/youtube_channel/faq.html
+++ b/youtube_channel/faq.html
@@ -39,21 +39,21 @@
         <main>
             <div class="content-faq">
                 <details class="story">
-                    <summary>¿Cómo sé si el contenido es bueno?</summary>
+                    <summary>¿Cómo puedo medir la calidad de mi contenido?</summary>
 
                     <p>Mira tus estadísticas para saber el promedio de personas que ven el video completo, si tu promedio es superior al 50%, vas por buen camino.
                     </p>
                 </details>
                 <details class="story">
                     <summary>¿Qué tipo de contenido necesito subir para obtener más seguidores?</summary>
-                    <p>El contenido "evergree" lo ayudará a obtener vistas a lo largo de los años, los videos categorizados como "evergreen" son contenido que las personas siguen buscando independientemente de la temporada. Por ejemplo, videos que explican "¿cómo escribir un sitio web?" o “¿cómo crear un canal de YouTube?”. El contenido sensacional atraerá vistas durante una temporada determinada, tal vez un par de meses como máximo, pero al final, la gente dejará de buscarlo y nadie seguirá viendo tu video.
+                    <p>El contenido "evergree" lo ayudará a obtener vistas a lo largo de los años, los videos categorizados como "evergreen" son contenido que las personas siguen buscando independientemente de la temporada. Por ejemplo, videos que explican "¿cómo escribir un sitio web?" o “¿cómo crear un canal de YouTube?”. El contenido sensacional atraerá vistas durante una temporada determinada, tal vez un par de meses como máximo, pero al final, la gente dejará de buscarlo.
                         
                     </p>
                     <img class="image_faq" src="images/FAQ-people.jpg" alt="banner of website" height="300" width="440">
                 </details>
                 <details class="story">
                     <summary>¿Por qué no puedo ver el progreso en mis redes sociales?</summary>
-                    <p>Ten paciencia, el progreso lleva tiempo, lo mejor que puedes hacer es retro alimentación para saber qué puedes mejorar en tu contenido.
+                    <p>Ten paciencia, el progreso lleva tiempo, lo mejor que puedes hacer es una retro alimentación para saber qué puedes mejorar en tu contenido.
                     </p>
                     <img class="image_faq" src="images/FAQ-people-meeting.jpg" alt="banner of website" height="300"
                         width="440">
@@ -61,7 +61,7 @@
                 </details>
                 <details class="story">
                     <summary>¿En qué red social puedo obtener mejores ingresos de dinero?</summary>
-                    <p>En mi opinión, YouTube, porque en Tiktok necesitas ser uno de los más famosos para obtener ingresos, en Instagram es similar a Tiktok, depende mucho de la marca que te quiera patrocinar y para que una marca patrocine necesitas un buena cantidad de seguidores por no decir millones. En cambio, en YouTube, puede ganar dinero fácilmente a través de publicidad.
+                    <p>En mi opinión, YouTube, porque en Tiktok necesitas ser uno de los más famosos para obtener ingresos, en Instagram es similar a Tiktok, depende mucho de la marca que te quiera patrocinar y para que una marca patrocine necesitas un buena cantidad de seguidores por no decir millones. En cambio, en YouTube, puedes ganar dinero fácilmente a través de publicidad.
                     </p>
                 </details>
             </div>
